--- a/client/index.html
+++ b/client/index.html
@@ -22,6 +22,7 @@
         <!--[if lt IE 9]>
         <script src="vendor/html5shiv/dist/html5shiv.js"></script>
         <![endif]-->
+        <div></div>
 
     </head>
 
