--- a/client/index.html
+++ b/client/index.html
@@ -29,6 +29,7 @@
         <my-navigation></my-navigation>
        
          <ui-view></ui-view>
+        <div></div>
 
         <my-footer></my-footer>
 
